# galatea_v2

./: CMakeLists.txt  openocd.cfg
src/: CMakeLists.txt
src/app/: CMakeLists.txt  logger.h  main.cpp
src/arch/: CMakeLists.txt
src/arch/stm32f303/: CMakeLists.txt  LinkerScript.ld
src/arch/stm32f303/CMSIS/: CMakeLists.txt
src/arch/stm32f303/CMSIS/RTOS/Template/: cmsis_os.h
src/arch/stm32f303/STM32F3xx_HAL_Driver/Src/: stm32f3xx_hal.c
src/arch/stm32f303/abstraction/: CMakeLists.txt  gpio.cpp  gpio.h  i2c_master.cpp  i2c_master.h  uart.cpp  uart.h
src/arch/stm32f303/config/: CMakeLists.txt  stm32f3xx_hal_conf.h
src/arch/stm32f303/startup/: CMakeLists.txt  startup_stm32f303xc.s
src/bsp/stm32f303/: CMakeLists.txt  bsp.cpp  bsp.h
src/itf/hal/: igpio.h  ii2c_master.h  iuart.h
src/sup/: CMakeLists.txt  ring_buffer.h
