target_sources(${EXECUTABLE} PUBLIC
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_dac_ex.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_comp.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_rcc_ex.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_crc.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_adc.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_rtc.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_hrtim.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_opamp.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_dma.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_ll_fmc.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_flash_ex.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_cortex.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_pcd_ex.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_i2c_ex.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_spi_ex.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_rtc_ex.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_pcd.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_dac.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_wwdg.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_i2s.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_cec.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_opamp_ex.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_sdadc.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_can.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_pwr_ex.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_smartcard_ex.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_iwdg.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_flash.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_uart.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_gpio.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_i2s_ex.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_nor.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_nand.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_adc_ex.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_tsc.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_rcc.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_pccard.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_irda.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_pwr.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_uart_ex.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_i2c.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_tim.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_spi.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_usart.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_tim_ex.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_smartcard.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_crc_ex.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_smbus.c
STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_sram.c
)

target_include_directories(${EXECUTABLE} PUBLIC 
${CMAKE_CURRENT_SOURCE_DIR}/STM32F3xx_HAL_Driver/Inc
${CMAKE_CURRENT_SOURCE_DIR}/CMSIS/Include
${CMAKE_CURRENT_SOURCE_DIR}/CMSIS/Device/ST/STM32F3xx/Include
)

set(linkerScript ${CMAKE_CURRENT_SOURCE_DIR}/LinkerScript.ld)
add_subdirectory(abstraction)
add_subdirectory(config)
add_subdirectory(startup)

